Name:                todo-today
Version:             0.1
Synopsis:            TODO application
Homepage:            https://github.com/andygillku/todo-today
Bug-reports:         https://github.com/andygillku/todo-today/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>
Maintainer:          Andrew Gill <andygill@ku.edu>
Copyright:           (c) Andrew Gill
Category:            Productivity
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  ACID TODO application

Extra-source-files:
    README.md

source-repository head
  type:     git
  location: git://github.com/andygillku/todo-today.git

Executable todo-today
    Build-Depends: 
         base                   >= 4.6,
         time                   >= 1.4,
         old-locale              >= 1.0,
         cmdargs               >= 0.10,
         containers             >= 0.5,
         directory              >= 1.2,
         data-default           >= 0.5
                  
    Main-is: Main.hs
    Hs-Source-Dirs: src
    Ghc-Options: -threaded
    default-language:    Haskell2010
