Name:                todo-today
Version:             0.2
Synopsis:            TODO application
Homepage:            https://github.com/andygill/todo-today
Bug-reports:         https://github.com/andygill/todo-today/issues
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>
Maintainer:          Andrew Gill <andygill@ku.edu>
Copyright:           (c) Andrew Gill
Category:            Productivity
Build-type:          Simple
Cabal-version:       >= 1.10
Description:
  ACID TODO application

Extra-source-files:
    README.md

source-repository head
  type:     git
  location: git://github.com/andygill/todo-today.git

Executable todo-today
    Build-Depends: 
         containers             >= 0.5,
         directory              >= 1.2,
         base                   >= 4.6,
         old-locale             >= 1.0,
         process                >= 1.2,
         time                   >= 1.4,
         unix                   >= 2.6
--         cmdargs               >= 0.10,

--         deepseq                >= 1.3,
--         data-default           >= 0.5
                  
    Main-is: Todo.hs
    Hs-Source-Dirs: src
    Ghc-Options: -threaded
    default-language:    Haskell2010
